--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "gatsby-plugin-sitemap": "^5.4.0",
     "gatsby-plugin-styled-components": "^5.4.0",
     "gatsby-source-contentful": "^7.2.0",
+    "gatsby-source-filesystem": "^4.10.1",
+    "gatsby-source-wordpress": "^6.10.1",
     "gatsby-transformer-sharp": "^4.4.0",
     "gbimage-bridge": "^0.2.0",
     "gsap": "^3.9.0",
+    "html-react-parser": "^1.4.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
