replaced dummy values with placeholders

--- a/example-config.json
+++ b/example-config.json
@@ -1,5 +1,5 @@
 {
-  "spaceId": "sfyumskhxrwk",
-  "managementToken": "CFPAT-tLZfEd2aZL2NvjYYTibK3HR7pW3mP9LhItCkqFPuX0s",
+  "spaceId": "<ID>",
+  "managementToken": "<TOKEN>",
   "contentFile": "content-model.json"
 }
