--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@contentful/rich-text-react-renderer": "^15.10.1",
     "@contentful/rich-text-types": "^15.10.1",
     "@fontsource/heebo": "^4.5.2",
+    "@pasdo501/gatsby-source-woocommerce": "^0.15.1",
     "babel-plugin-styled-components": "^2.0.2",
     "dotenv": "^10.0.0",
     "framer-motion": "^5.5.5",
