--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "barcadia",
+  "name": "barcadia-wp",
   "private": true,
-  "description": "A super-fast site using GatsbyJS",
-  "version": "2.0.0",
+  "description": "A WordPress-flavoured Barcadia theme.",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -14,36 +14,32 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.10.1",
-    "@contentful/rich-text-types": "^15.10.1",
-    "@fontsource/heebo": "^4.5.2",
+    "@fontsource/heebo": "^4.5.9",
     "@pasdo501/gatsby-source-woocommerce": "^0.15.1",
-    "babel-plugin-styled-components": "^2.0.2",
-    "dotenv": "^10.0.0",
-    "framer-motion": "^5.5.5",
-    "gatsby": "^4.4.0",
+    "babel-plugin-styled-components": "^2.0.7",
+    "dotenv": "^16.0.0",
+    "framer-motion": "^6.2.9",
+    "gatsby": "^4.11.2",
     "gatsby-background-image": "^1.6.0",
-    "gatsby-plugin-image": "^2.4.0",
-    "gatsby-plugin-react-helmet": "^5.4.0",
-    "gatsby-plugin-robots-txt": "^1.6.14",
-    "gatsby-plugin-sharp": "^4.4.0",
-    "gatsby-plugin-sitemap": "^5.4.0",
-    "gatsby-plugin-styled-components": "^5.4.0",
-    "gatsby-source-filesystem": "^4.10.1",
-    "gatsby-source-wordpress": "^6.10.1",
-    "gatsby-transformer-sharp": "^4.4.0",
-    "gbimage-bridge": "^0.2.0",
-    "gsap": "^3.9.0",
-    "html-react-parser": "^1.4.9",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "gatsby-cli": "^4.11.2",
+    "gatsby-plugin-image": "^2.11.1",
+    "gatsby-plugin-react-helmet": "^5.11.0",
+    "gatsby-plugin-robots-txt": "^1.7.0",
+    "gatsby-plugin-sharp": "^4.11.1",
+    "gatsby-plugin-sitemap": "^5.11.1",
+    "gatsby-plugin-styled-components": "^5.11.0",
+    "gatsby-source-filesystem": "^4.11.1",
+    "gatsby-source-wordpress": "^6.11.2",
+    "gatsby-transformer-sharp": "^4.11.0",
+    "gsap": "^3.10.2",
+    "html-react-parser": "^1.4.10",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-image-gallery": "^1.2.7",
-    "styled-components": "^5.3.0"
-  },
-  "devDependencies": {
-    "prettier": "^2.5.1"
+    "styled-components": "^5.3.5",
+    "uuid": "^8.3.2"
   },
   "repository": {
     "type": "git",
