--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,8 @@
   "endOfLine": "lf",
   "semi": false,
   "singleQuote": false,
-  "tabWidth": 2,
-  "trailingComma": "es5"
+  "tabWidth": 4,
+  "useTabs": true,
+  "trailingComma": "es5",
+  "bracketSpacing": true
 }
