--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "gatsby-transformer-sharp": "^4.11.0",
     "gsap": "^3.10.2",
     "html-react-parser": "^1.4.10",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": ">=15.0.0",
+    "react-dom": ">=15.0.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-image-gallery": "^1.2.7",
