--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"src/**/*.{js,json}\"",
+    "lint": "eslint \"src/**/*.{js,json}\"",
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.17.0",
     "@fontsource/heebo": "^4.5.9",
     "@pasdo501/gatsby-source-woocommerce": "^0.15.1",
     "babel-plugin-styled-components": "^2.0.7",
@@ -33,8 +35,9 @@
     "gatsby-transformer-sharp": "^4.11.0",
     "gsap": "^3.10.2",
     "html-react-parser": "^1.4.10",
-    "react": ">=15.0.0",
-    "react-dom": ">=15.0.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-image-gallery": "^1.2.7",
@@ -49,6 +52,8 @@
     "url": "https://github.com/bagseye/barcadia/issues"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.29.4",
     "prettier": "2.6.2"
   }
 }
