--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,25 +3,31 @@
         "browser": true,
         "es2021": true
     },
-	"settings": {
-		"react": {
-		  	"version": "detect"
-		}
-	},
-    "extends": [ 
-		"eslint:recommended",
-		"plugin:react/recommended"
-	],
-    "parserOptions": {
+	"parserOptions": {
         "ecmaFeatures": {
             "jsx": true
         },
         "ecmaVersion": 12,
         "sourceType": "module"
     },
-    "plugins": [
-        "react"
+	"settings": {
+		"react": {
+		  	"version": "detect"
+		}
+	},
+	"plugins": [
+        "react",
+		"@typescript-eslint",
+		"prettier"
     ],
+    "extends": [ 
+		"eslint:recommended",
+		"plugin:react/recommended",
+		"eslint:recommended",
+		"plugin:@typescript-eslint/eslint-recommended",
+		"plugin:@typescript-eslint/recommended",
+		"prettier"
+	],
     "rules": {
     }
 }
