--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"src/**/*.{js,json}\"",
-    "lint": "eslint \"src/**/*.{js,json}\"",
+    "format": "prettier --write \"src/**/*.{js,jsx,json,ts,tsx}\"",
+    "lint": "eslint \"src/**/*.{js,jsx,json,ts,tsx}\"",
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
@@ -35,7 +35,6 @@
     "gatsby-transformer-sharp": "^4.11.0",
     "gsap": "^3.10.2",
     "html-react-parser": "^1.4.10",
-    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
@@ -52,8 +51,15 @@
     "url": "https://github.com/bagseye/barcadia/issues"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
+    "@types/node": "^17.0.23",
+    "@types/react": "^18.0.1",
+    "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
-    "prettier": "2.6.2"
+    "prettier": "2.6.2",
+    "typescript": "^4.6.3"
   }
 }
