--- a/package.json
+++ b/package.json
@@ -16,30 +16,29 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.17.0",
-    "@fontsource/heebo": "^4.5.9",
-    "@pasdo501/gatsby-source-woocommerce": "^0.15.1",
+    "@fontsource/heebo": "^4.5.12",
     "babel-plugin-styled-components": "^2.0.7",
-    "dotenv": "^16.0.0",
-    "framer-motion": "^6.2.9",
-    "gatsby": "^4.11.2",
+    "dotenv": "^16.0.1",
+    "framer-motion": "^6.3.3",
+    "gatsby": "^4.14.1",
     "gatsby-background-image": "^1.6.0",
-    "gatsby-cli": "^4.11.2",
-    "gatsby-plugin-image": "^2.11.1",
-    "gatsby-plugin-react-helmet": "^5.11.0",
-    "gatsby-plugin-robots-txt": "^1.7.0",
-    "gatsby-plugin-sharp": "^4.11.1",
-    "gatsby-plugin-sitemap": "^5.11.1",
-    "gatsby-plugin-styled-components": "^5.11.0",
-    "gatsby-source-filesystem": "^4.11.1",
-    "gatsby-source-wordpress": "^6.11.2",
-    "gatsby-transformer-sharp": "^4.11.0",
-    "gsap": "^3.10.2",
-    "html-react-parser": "^1.4.10",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "gatsby-cli": "^4.14.0",
+    "gatsby-plugin-image": "^2.14.1",
+    "gatsby-plugin-react-helmet": "^5.14.0",
+    "gatsby-plugin-robots-txt": "^1.7.1",
+    "gatsby-plugin-sharp": "^4.14.1",
+    "gatsby-plugin-sitemap": "^5.14.0",
+    "gatsby-plugin-styled-components": "^5.14.0",
+    "gatsby-source-filesystem": "^4.14.0",
+    "gatsby-source-wordpress": "^6.14.3",
+    "gatsby-transformer-sharp": "^4.14.0",
+    "gsap": "^3.10.4",
+    "html-react-parser": "^1.4.12",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
-    "react-image-gallery": "^1.2.7",
+    "react-image-gallery": "^1.2.8",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2"
   },
@@ -51,14 +50,15 @@
     "url": "https://github.com/bagseye/barcadia/issues"
   },
   "devDependencies": {
-    "@types/node": "^17.0.23",
-    "@types/react": "^18.0.1",
-    "@types/react-dom": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "eslint": "^8.13.0",
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
+    "@types/styled-components": "^5.1.25",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react": "^7.30.0",
     "prettier": "2.6.2",
     "typescript": "^4.6.4"
   }
